...
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Find Restaurants"
        android:id="@+id/findRestaurantsButton"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
        android:visibility="visible"
        android:layout_above="@+id/savedRestaurantsButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationEditText"
        android:layout_above="@+id/findRestaurantsButton"
        android:background="@color/colorTextIcons"
        android:padding="5dp"
        android:hint="Enter Zip Code"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
...
